--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Spirala</string>
+    <string name="app_name">My transactions</string>
     <string name="add_transaction">Add transaction</string>
     <string name="citat">“That man is richest whose pleasures are cheapest.”</string>
     <string name="pisac">Henry David Thoreau</string>
